--- a/letters-en.html
+++ b/letters-en.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <head>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<style type="text/css">
             
             * {
